--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@builder.io/react": "^8.0.12",
     "@prisma/client": "^5.10.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.49.4",
+    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.4.17",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
     "cloudinary": "^2.6.0",
+    "crypto-browserify": "^3.12.1",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "next": "^14.1.0",
     "postcss": "^8.4.33",
     "qrcode.react": "^3.1.0",
@@ -27,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-phone-number-input": "^3.4.12",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.1",
     "vcf": "^2.1.1",
     "zod": "^3.22.4"
@@ -38,9 +44,15 @@
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "dotenv": "^16.5.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "prisma": "^5.10.0",
     "typescript": "^5.3.3"
+  },
+  "browser": {
+    "fs": "./src/lib/empty-module.js",
+    "child_process": "./src/lib/empty-module.js",
+    "net": false
   }
 }
